<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.constraint.ConstraintLayout
        android:id="@+id/tv_video_hall_card_layout"
        android:layout_width="304dp"
        android:layout_height="407dp"
        android:background="@drawable/bg_popup"
        android:paddingStart="29dp"
        android:paddingEnd="29dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_video_hall_play_end_content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="60dp"
            android:gravity="top"
            android:lineSpacingExtra="2sp"
            android:text="@string/string_video_hall_play_end_tips"
            android:textColor="#80581f"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@+id/tv_video_hall_play_end_card"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <LinearLayout
            android:id="@+id/tv_video_hall_play_end_card"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="56dp"
            android:background="@drawable/bg_fff6e0_radius_3"
            android:orientation="horizontal"
            app:layout_constraintBottom_toTopOf="@+id/tv_video_hall_play_end_ok_btn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent">

            <com.facebook.drawee.view.SimpleDraweeView
                android:id="@+id/iv_video_hall_play_end_image"
                android:layout_width="64dp"
                android:layout_height="64dp"
                android:layout_marginStart="5dp"
                android:layout_marginTop="7.5dp"
                android:layout_marginBottom="7.5dp"
                app:actualImageScaleType="centerCrop"
                app:backgroundImage="@color/black"
                app:roundBottomLeft="true"
                app:roundBottomRight="true"
                app:roundTopLeft="true"
                app:roundTopRight="true"
                app:roundedCornerRadius="5dp" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="10.5dp"
                android:layout_marginEnd="14.5dp"
                android:layout_marginBottom="7.5dp"
                android:gravity="bottom"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/tv_video_hall_play_end_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:lineSpacingExtra="2sp"
                    android:singleLine="true"
                    android:textColor="#592f0a"
                    android:textSize="14sp"

                    tools:text="韩国小姐姐直拍热舞秀..." />

                <TextView
                    android:id="@+id/tv_video_hall_play_end_subscript_num"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"

                    android:lineSpacingExtra="4sp"
                    android:textColor="#80581f"
                    android:textSize="12sp"
                    tools:text="@string/string_subscript_count" />

                <TextView
                    android:id="@+id/tv_video_hall_play_end_subscript"
                    android:layout_width="68dp"
                    android:layout_height="27dp"
                    android:layout_marginTop="5dp"

                    android:background="@drawable/selector_subscript_bg"
                    android:drawableStart="@drawable/ic_add"
                    android:gravity="center"
                    android:lineSpacingExtra="0sp"
                    android:paddingStart="14dp"
                    android:paddingEnd="14dp"
                    android:text="@string/string_video_hall_subscript"

                    android:textColor="@color/selector_subscript_text_color"
                    android:textSize="12sp" />
            </LinearLayout>

        </LinearLayout>

        <TextView
            android:id="@+id/tv_video_hall_play_end_ok_btn"
            android:layout_width="match_parent"
            android:layout_height="44dp"
            android:layout_marginBottom="40dp"
            android:background="@drawable/bg_btn_black_radius_22"
            android:gravity="center"
            android:letterSpacing="0.01"
            android:lineSpacingExtra="2sp"
            android:text="@string/string_got_home"
            android:textColor="#ffde85"
            android:textSize="16sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent" />

    </android.support.constraint.ConstraintLayout>

    <ImageView
        android:id="@+id/iv_video_hall_play_end_close"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:padding="10dp"
        android:src="@drawable/ic_close1"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tv_video_hall_card_layout" />

</android.support.constraint.ConstraintLayout>
